--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,15 @@
     <string name="num_creds_hint">74</string>
     <string name="button_next">Next</string>
 
+<!--    Settings Screen-->
+    <string name="settings_header">Settings</string>
+    <string name="about_us">About Us</string>
+    <string name="about_app">About App</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="logout">Logout</string>
+    <string name="restore_your_data">Restore Your Data</string>
+    <string name="backup_your_data">Backup Your Data</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
