--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,6 @@
     </string-array>
 
     <!--  Add Evaluative Screen  -->
-
     <string name="add_evaluative_header">Add Evaluative</string>
     <string name="subject">Subject</string>
     <string name="date">Date</string>
@@ -55,6 +54,8 @@
     <string name="num_creds">Enter number of\ncredits completed</string>
     <string name="num_creds_hint">74</string>
     <string name="button_next">Next</string>
+    
+    <!--  Evaluative Card  -->
     <string name="course_code">CS F314</string>
     <string name="course_name">Software Development for\nPortable Devices</string>
     <string name="evaluative_date">16/10/1022</string>
