--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,15 @@
     <string name="evaluative_nature">Nature: Open Book</string>
     <string name="evaluative_duration">Duration: 30 Minutes</string>
 
+    <!--  Settings Screen  -->
+    <string name="settings_header">Settings</string>
+    <string name="about_us">About Us</string>
+    <string name="about_app">About App</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="logout">Logout</string>
+    <string name="restore_your_data">Restore Your Data</string>
+    <string name="backup_your_data">Backup Your Data</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
