--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,23 @@
     <string name="lecture_text">L1</string>
     <string name="class_time_text">10:00 - 10:50</string>
 
+    <!--  Planner Card  -->
+    <string name="time_duration">10:00-12:30</string>
+    <string name="plan_name">Android Development</string>
+    <string name="priority_type">Priority:</string>
+    <string name="description_plan">Description:</string>
+    <string name="desc_info">Fragment, TopBar design, Android Architectures, Databases, Multiple activities</string>
+    <string name="priority_info">High</string>
+
+<!--    Settings Screen-->
+    <string name="settings_header">Settings</string>
+    <string name="about_us">About Us</string>
+    <string name="about_app">About App</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="logout">Logout</string>
+    <string name="restore_your_data">Restore Your Data</string>
+    <string name="backup_your_data">Backup Your Data</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
