--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,6 +110,9 @@
     <string name="cgpa_detail">8.69</string>
     <string name="your_timetable_header">Your TimeTable</string>
 
+<!--    Planner Screen-->
+    <string name="planner_heading">Your Plans</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
