--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,11 @@
     <!--  Planner Screen  -->
     <string name="planner_heading">Your Plans</string>
 
+    <!--  My Acads  -->
+    <string name="my_acads_header">Evaluatives</string>
+    <string name="evals">Evals</string>
+    <string name="backlog">Backlog</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
