Navigation for: Welcome screen to register screen Edit Timetable to Profile page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,9 @@
     <string name="evals">Evals</string>
     <string name="backlog">Backlog</string>
 
+<!--    Edit Timetable-->
+    <string name="edit_tt">Edit Timetable</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
