--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,8 +145,9 @@
     <string name="evals">Evals</string>
     <string name="backlog">Backlog</string>
 
-<!--    Edit Timetable-->
+    <!--  Edit Timetable  -->
     <string name="edit_tt">Edit Timetable</string>
+    <string name="edit_button_text">Edit</string>
 
     <string-array name="dummy_entries">
         <item>Dummy</item>
