Navigation for Welcome and EditTimeTable: (#16)
* Navigation for:
Welcome screen to register screen
Edit Timetable to Profile page

* Update strings.xml

* Update fragment_edit_timetable.xml

* Update EditTimetableViewModel.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,10 @@
     <string name="evals">Evals</string>
     <string name="backlog">Backlog</string>
 
+    <!--  Edit Timetable  -->
+    <string name="edit_tt">Edit Timetable</string>
+    <string name="edit_button_text">Edit</string>
+
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
