--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,8 +111,9 @@
     <string name="your_timetable_header">Your TimeTable</string>
 
     <!--  Grade Card  -->
-    <string name="grade_code">CS F314</string>
+    <string name="grade_dept_code">CS</string>
     <string name="grade_course_name">Software Development for Portable Devices</string>
+    <string name="grade_course_code">F314</string>
     
     <!--  Add Course Card  -->
     <string name="course_code_heading">Course Code</string>
