Add room database connections for addExtraFragment , AddEvaluativeFragment (#23)
Update RoomRepository
Update AddEvalViewModel , AddExtraclassViewModel

Add string-array resource for subject and time
add Dummy entries for subject and time in fragment_add_eval, fragment_add_extra_class layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,11 @@
     <string-array name="dummy_entries">
         <item>Dummy</item>
     </string-array>
+    <string-array name="extra_class_dummy">
+        <item>CS F314 L1</item>
+    </string-array>
+    <string-array name="time_dummy">
+        <item>12:30</item>
+        <item>14:20</item>
+    </string-array>
 </resources>
