--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,10 +60,14 @@
     <string name="course_name">Software Development for\nPortable Devices</string>
     <string name="evaluative_date">16/10/1022</string>
     <string name="evaluative_time">10:00</string>
-    <string name="evaluative_type">Type: Quiz</string>
-    <string name="evaluative_syllabus">Syllabus:\nActivity Lifecycle, Fragments, Database- SQLite\nRoom, Layouts, App Architecture.</string>
-    <string name="evaluative_nature">Nature: Open Book</string>
-    <string name="evaluative_duration">Duration: 30 Minutes</string>
+    <string name="evaluative_type">Type:</string>
+    <string name="evaluative_type_text">Quiz</string>
+    <string name="evaluative_syllabus">Syllabus:</string>
+    <string name="evaluative_syllabus_desc">Activity Lifecycle, Fragments, Database- SQLite\nRoom, Layouts, App Architecture.</string>
+    <string name="evaluative_nature">Nature:</string>
+    <string name="nature_value">Open Book</string>
+    <string name="evaluative_duration">Duration:</string>
+    <string name="duration_value">30 Minutes</string>
 
     <!--  Backlog Card  -->
     <string name="course_name_backlog">Software Development for Portable Devices</string>
