--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,13 @@
         <item>12:30</item>
         <item>14:20</item>
     </string-array>
+    <string-array name="date_dummy">
+        <item>2022-11-23</item>
+        <item>2022-11-24</item>
+        <item>2022-11-25</item>
+        <item>2022-11-26</item>
+        <item>2022-11-27</item>
+        <item>2022-11-28</item>
+        <item>2022-11-29</item>
+    </string-array>
 </resources>
