--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,20 @@
     <string name="num_creds_hint">74</string>
     <string name="button_next">Next</string>
 
+    <string-array name="semester_entries">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>PS 1</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
+
     <!--  Evaluative Card  -->
     <string name="course_code">CS F314</string>
     <string name="course_name">Software Development for\nPortable Devices</string>
